CD-129688 Выгрузка CSV
