# src/external_offers/repositories/moderation_confidence_index/entities/__init__.py
@@ -6,9 +6,12 @@ Code generated by cian-codegen; DO NOT EDIT.
 
 To re-generate, run `codegen generate-client moderation-confidence-index`
 
-cian-codegen version: 1.17.0
+cian-codegen version: 2.0.0
 
 """
+from .generate_csv_response_model import GenerateCsvResponseModel
+from .get_csv_report_status_request_model import GetCsvReportStatusRequestModel
+from .get_csv_report_status_response_model import GetCsvReportStatusResponseModel
 from .get_operator_calls_filter import GetOperatorCallsFilter
 from .operator_call_model import OperatorCallModel
 from .get_operator_calls_response_model import GetOperatorCallsResponseModel
